<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/idea_edit_form_loader"
            >
        <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:longClickable="false" android:id="@+id/idea_edit_form_holder">
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idea_title_edit" android:singleLine="true" android:hint="@string/title_hint"
                android:inputType="textCapWords" android:focusableInTouchMode="false"/>
        <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/idea_text_edit" android:layout_gravity="center" android:hint="@string/text_hint"
                android:inputType="textMultiLine|textCapSentences" android:autoText="false"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_idea_public"
                android:id="@+id/idea_public_check_box"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_idea_button"
                    android:id="@+id/submit_button" android:layout_gravity="center" android:layout_weight="1"/>
            <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_button"
                    android:id="@+id/cancel_button" android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>