<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:background="@drawable/login_gradient" android:padding="10dp">

        <!--  Header Starts-->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/header_linear"
                android:layout_alignParentTop="true" android:paddingTop="20dp">
            <!-- Logo starts -->
            <ImageView android:src="@drawable/logo"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"/>
            <!-- Logo ends -->
        </LinearLayout>
        <!--  Header Ends -->

        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/footer_linear"
                android:layout_alignParentBottom="true">
            <TextView android:id="@+id/link_to_register"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/link_to_register"
                      android:gravity="center"
                      android:textSize="20dp" android:padding="10dp" android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <!-- Footer Ends -->

        <!-- Login Form -->
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_linear"
                android:id="@+id/login_linear"
                android:paddingBottom="20dp" android:layout_centerVertical="true" android:padding="10dp"
                >
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/username_edit" android:layout_gravity="center" android:hint="@string/username_hint"
                      android:singleLine="true" android:layout_marginBottom="10dp" android:layout_marginTop="10dp"/>
            <EditText android:layout_width="fill_parent" android:layout_height="wrap_content"
                      android:id="@+id/password_edit" android:layout_gravity="center" android:hint="@string/password_hint"
                      android:password="true" android:singleLine="true"
                      android:layout_marginBottom="10dp"/>
            <Button android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:text="@string/login_button"
                    android:id="@+id/login_button"
                    android:layout_gravity="center"
                    android:longClickable="false"
                    android:background="@drawable/main_button"
                    android:textColor="@drawable/main_button_text_color"
                    style="@style/ButtonTextStyle"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:id="@+id/forgot_password_link" android:layout_gravity="center_horizontal"
                    android:paddingTop="20dp"/>
            <!-- Link to Registration Screen -->


        </LinearLayout>
        <!-- Login Form Ends -->

    </RelativeLayout>
</ScrollView>