<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" android:gravity="center_vertical"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:background="@drawable/app_main_bg">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="2">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title_img"
                android:clickable="false" android:background="@drawable/logo" android:padding="20dp"
                android:layout_gravity="center" android:layout_centerHorizontal="true" android:layout_alignParentTop="true"
                />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:layout_weight="1">
        <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" android:layout_alignParentTop="true">
            <TextView
                    style="@style/BoldTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/user_needed_title" />
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false" android:layout_below="@+id/textView1"
                    android:layout_centerHorizontal="true">
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:text="@string/login_button"
                        android:id="@+id/login_button" android:layout_weight="1" android:layout_alignParentLeft="true"
                        android:layout_above="@+id/textView"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="or"
                        android:id="@+id/textView" android:layout_gravity="center" style="@style/RegularText"
                        android:autoText="false"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/forgot_password_text"
                        android:layout_gravity="center"
                        android:autoLink="all"
                        android:textSize="14dp"
                        android:text="@string/forgot_password"
                        android:padding="5dp"/>
                <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up_button"
                        android:id="@+id/sign_up_button" android:layout_weight="1" android:layout_gravity="center"/>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>